--- a/CinemaDBtest/CinemaDBtest.vcxproj
+++ b/CinemaDBtest/CinemaDBtest.vcxproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <ClInclude Include="CinemaDB.h" />
     <ClInclude Include="Function.h" />
+    <ClInclude Include="Server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
