add DB class to all user thred
add class of user thread

add func to check nick name in data base from request

add func to add new user from request

begin of func to get list of film from data base from request

--- a/CinemaDBtest/CinemaDBtest.vcxproj
+++ b/CinemaDBtest/CinemaDBtest.vcxproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CinemaDB.h" />
+    <ClInclude Include="ClientThread.h" />
     <ClInclude Include="Function.h" />
     <ClInclude Include="Server.h" />
   </ItemGroup>
