--- a/CinemaDBtest/CinemaDBtest.vcxproj.filters
+++ b/CinemaDBtest/CinemaDBtest.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Server.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ClientThread.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
