--- a/CinemaDBtest/CinemaDBtest.vcxproj.filters
+++ b/CinemaDBtest/CinemaDBtest.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="ClientThread.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="AdminThread.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
